[package]
name = "meta-overlayfsUltra"
version = "1.0.0"
edition = "2021"
authors = ["xiaoluoshen"]
description = "Ultra-stealth OverlayFS MetaModule for KernelSU — advanced mount isolation with anti-detection hardening"
license = "GPL-3.0"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = { version = "0.11", default-features = false }
rustix = { git = "https://github.com/KernelSU/rustix.git", rev = "4a53fbc7cb7a07cabe87125cc21dbc27db316259", features = ["all-apis"] }
procfs = "0.17"

[profile.release]
strip = true
opt-level = "z"        # Minimize binary size
lto = true             # Link-time optimization
codegen-units = 1      # Maximum optimization
panic = "abort"        # Reduce binary size
